--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@slack/bolt": "^3.3.0",
+    "@slack/web-api": "^6.4.0",
     "dotenv": "^8.2.0",
     "mongoose": "^5.12.1"
   },
